# labyrinth-solver

./: README.md  fix_rpath.sh  flake.nix  run_part1.sh  run_part2.sh
src/cg/cg/: Editor.py  Game.py  Maze.py  Robot.py  main.py  teste.py
src/cg_solver/: CMakeLists.txt  package.xml
src/cg_solver/include/cg_solver/: mapper.hpp  pathfinder.hpp  utils.hpp
src/cg_solver/src/: mapper.cpp  part1_solver.cpp  part2_mapper.cpp  pathfinder.cpp
