<?xml version="1.0"?>
<package format="3">
  <name>cg_solver</name>
  <version>1.0.0</version>
  <description>Solver C++ para navegação e mapeamento do labirinto</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cg_interfaces</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
